# yolo-data-forge

./: .gitignore  README.md  pyproject.toml
src/add_extension/: __init__.py  add_extension.py
src/big_image_to4parts/: __init__.py  big_image_to4parts.py
src/bright_sort/: __init__.py  bright_sort.py
src/careful_merger/: __init__.py  careful_merger.py
src/classes_counter_obb/: __init__.py  classes_counter_obb.py
src/converters/obb2not_obb/: __init__.py  obb2not_obb.py
src/converters/yolo2labelimg_obb/: __init__.py  yolo2labelimg_obb.py
src/dataforge/: about.py
src/dataset_fingerprint/: fingerprint_creator.py
src/decimator/: __init__.py  decimator.py
src/empty_pictures/: __init__.py  empty_pictures.py
src/exact_copies_cleaner/: __init__.py  exact_copies_cleaner.py
src/hashes/dataset_fingerprint/: __init__.py
src/hashes/db_folder_intersection/: __init__.py  db_folder_intersection.py
src/hashes/db_intersection/: __init__.py  db_intersection.py
src/hashes/delete_apply/: __init__.py  delete_apply.py
src/hashes/merge_db/: __init__.py  merge_db.py
src/laplac_sort/: __init__.py  laplac_sort.py
src/latinizer/: __init__.py  latinizer.py
src/packer/: __init__.py  packer.py
src/part_mover/: __init__.py  move_files.py
src/part_mover/simalar_images_finder/: __init__.py  part_mover.py
src/quote_remove/: __init__.py  quote_remove.py
src/simalar_images_finder/: __init__.py  similarity_test.py
src/sorted_filesizes_txt/: __init__.py  sorted_filesizes_txt.py
src/train_val_split/: __init__.py  train_val_split.py
src/video_duration/: __init__.py  video_duration.py
