[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
df_pairs = "empty_pictures.empty_pictures:empty_pictures"
df_split = "train_val_split.train_val_split:train_val_split"
df_4parts = "big_image_to4parts.big_image_to4parts:big_image_to4parts"
df_hash_db = "dataset_fingerprint.fingerprint_creator:fingerprint_creator"
df_decimator = "simalar_images_finder.similarity_test:similarity_test"
df_hash_dxf = "db_folder_intersection.db_folder_intersection:intersector"
df_about = "dataforge.about:about"
df_partmove = "part_mover.move_files:move_files"
df_sizes_dump = "sorted_filesizes_txt.sorted_filesizes_txt:sorted_filesizes_txt"
df_yolo2labelimg_obb = "converters.sorted_filesizes_txt.sorted_filesizes_txt:convett"


[project]
name = "yolo-data-forge"
version = "0.0.6"
authors = [
  { name="ioretcio", email="goncharukyou@example.com" },
]
description = "a knife for data"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]