[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
df_pairs = "empty_pictures.empty_pictures:empty_pictures"
df_split = "train_val_split.train_val_split:train_val_split"
df_4parts = "big_image_to4parts.big_image_to4parts:big_image_to4parts"
df_partmove = "part_mover.move_files:move_files"
df_latin = "latinizer.latinizer:recursively_translit"
df_bright_sort = "bright_sort.bright_sort:sort"
df_video_duration = "video_duration.video_duration:duration"
df_extadd = "add_extension.add_extension:add_extension"
df_carmerge = "careful_merger.careful_merger:merge"

df_hash_db = "hashes.dataset_fingerprint.fingerprint_creator:fingerprint_creator"
df_hash_dxf = "hashes.db_folder_intersection.db_folder_intersection:intersect"
df_db_intersection = "hashes.db_intersection.db_intersection:intersect"
df_filedel = "hashes.delete_apply.delete_apply:deleter"

df_yolo2labelimg_obb = "converters.yolo2labelimg_obb.yolo2labelimg_obb:convert"

df_exact_copies = "exact_copies_cleaner.exact_copies_cleaner:exact_cleaner"
df_decimator = "decimator.decimator:decimator"

df_about = "dataforge.about:about"

[project]
name = "yolo-data-forge"
version = "0.2.4"
authors = [
  { name="ioretcio", email="goncharukyou@example.com" },
]
description = "a knife for data"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]